--- a/index.html
+++ b/index.html
@@ -397,51 +397,54 @@
 
     <div class="modal_overlay is_open">
         <div class="modal">
-            <div class="modal_close_button">
-                <div class="svg_close_wrapper_container">
-                    <svg class="svg_icon_container" width="8px" height="8px">
-                        <use href="./images/icons.svg#icon-close"></use>
-                    </svg>
-                </div>
-            </div>
+
+            <button type="button" class="svg_close_button">
+                <svg class="svg_icon_container" width="8px" height="8px">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+
 
             <p class="body_medium modal_title">Leave your contacts and we will call you back</p>
 
             <form action="" class="form">
-                <label class="form_label small_text">
-                    Name
-                    <svg class="svg_icon_container" width="12" height="12">
-                        <use href="./images/icons.svg#icon-user"></use>
-                    </svg>
-                    <input class="form_input small_text" type="text" name="name" placeholder="">
-                </label>
-                <label class="form_label small_text">
-                    Phone
-                    <svg class="svg_icon_container" width="12" height="12">
-                        <use href="./images/icons.svg#icon-phone"></use>
-                    </svg>
-                    <input class="form_input" type="tel" name="number" placeholder="">
-                </label>
-                <label class="form_label small_text">
-                    Email
-                    <svg class="svg_icon_container" width="12" height="12">
-                        <use href="./images/icons.svg#icon-email"></use>
-                    </svg>
-                    <input class="form_input" type="email" name="email" placeholder="">
-                </label>
-                <label class="form_label small_text">
-                    Comment
-                    <textarea placeholder="Text input"></textarea>
-                </label>
+                <div class="">
+                    <label class="form_label small_text">
+                        Name
+                        <svg class="svg_icon_container" width="12" height="12">
+                            <use href="./images/icons.svg#icon-user"></use>
+                        </svg>
+                        <input class="form_input small_text" type="text" name="name" placeholder="">
+                    </label>
+                    <label class="form_label small_text">
+                        Phone
+                        <svg class="svg_icon_container" width="12" height="12">
+                            <use href="./images/icons.svg#icon-phone"></use>
+                        </svg>
+                        <input class="form_input" type="tel" name="number" placeholder="">
+                    </label>
+                    <label class="form_label small_text">
+                        Email
+                        <svg class="svg_icon_container" width="12" height="12">
+                            <use href="./images/icons.svg#icon-email"></use>
+                        </svg>
+                        <input class="form_input" type="email" name="email" placeholder="">
+                    </label>
+                    <label class="form_label small_text">
+                        Comment
+                        <textarea placeholder="Text input"></textarea>
+                    </label>
 
-                <section class="policy_section">
-                    <input type="checkbox" name="checkbutton">
-                    <p class="small_text policy_acception_text">I accept the terms and conditions of the <a href="#">Privacy Policy</a></p>
-                </section>
+                    <section class="policy_section">
+                        <input type="checkbox" name="checkbutton">
+                        <p class="small_text policy_acception_text">I accept the terms and conditions of the <a
+                                href="#">Privacy Policy</a></p>
+                    </section>
 
-                <button type="submit" class="form_button button">
-                    Send
-                </button>
+                    <button type="button" class="form_button button">
+                        Send
+                    </button>
+                </div>
             </form>
         </div>
     </div>
