--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         <div class="modal">
 
             <button type="button" class="svg_close_button">
-                <svg class="svg_icon_container" width="8px" height="8px">
+                <svg class="svg_icon_close_container" width="8px" height="8px">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
@@ -408,27 +408,34 @@
             <p class="body_medium modal_title">Leave your contacts and we will call you back</p>
 
             <form action="" class="form">
-                <div class="">
-                    <label class="form_label small_text">
+                <div class="form_wrapper_container">
+                    <label class="form_label small_text" for="user-name">
                         Name
-                        <svg class="svg_icon_container" width="12" height="12">
-                            <use href="./images/icons.svg#icon-user"></use>
-                        </svg>
-                        <input class="form_input small_text" type="text" name="name" placeholder="">
+                        <div class="label_wrapper_container">
+                            <input class="form_input small_text" type="text" name="name" id="user-name" placeholder="">
+                            <svg class="svg_icon_container" width="18" height="24">
+                                <use href="./images/icons.svg#icon-user"></use>
+                            </svg>
+
+                        </div>
                     </label>
                     <label class="form_label small_text">
                         Phone
-                        <svg class="svg_icon_container" width="12" height="12">
-                            <use href="./images/icons.svg#icon-phone"></use>
-                        </svg>
-                        <input class="form_input" type="tel" name="number" placeholder="">
+                        <div class="label_wrapper_container">
+                            <input class="form_input" type="tel" name="number" placeholder="">
+                            <svg class="svg_icon_container" width="18" height="24">
+                                <use href="./images/icons.svg#icon-phone"></use>
+                            </svg>
+                        </div>
                     </label>
                     <label class="form_label small_text">
                         Email
-                        <svg class="svg_icon_container" width="12" height="12">
-                            <use href="./images/icons.svg#icon-email"></use>
-                        </svg>
-                        <input class="form_input" type="email" name="email" placeholder="">
+                        <div class="label_wrapper_container">
+                            <input class="form_input" type="email" name="email" placeholder="">
+                            <svg class="svg_icon_container" width="18" height="24">
+                                <use href="./images/icons.svg#icon-email"></use>
+                            </svg>
+                        </div>
                     </label>
                     <label class="form_label small_text">
                         Comment
@@ -436,7 +443,7 @@
                     </label>
 
                     <section class="policy_section">
-                        <input type="checkbox" name="checkbutton">
+                        <input type="checkbox" name="checkbutton" value="true" id="user-privacy">
                         <p class="small_text policy_acception_text">I accept the terms and conditions of the <a
                                 href="#">Privacy Policy</a></p>
                     </section>
