--- a/index.html
+++ b/index.html
@@ -413,12 +413,13 @@
                         Name
                     </label>
                     <div class="label_wrapper_container">
-                        <input class="form_input small_text" type="text" name="name" id="user-name" placeholder="">
+                        <input class="form_input small_text" type="text" name="user-name" id="user-name" placeholder="">
                         <svg class="svg_icon_container" width="18" height="24">
                             <use href="./images/icons.svg#icon-user"></use>
                         </svg>
                     </div>
-
+                </div>
+                <div class="form_wrapper_container">
                     <label class="form_label small_text">
                         Phone
                     </label>
@@ -428,7 +429,8 @@
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                     </div>
-
+                </div>
+                <div class="form_wrapper_container">
                     <label class="form_label small_text">
                         Email
                     </label>
@@ -438,7 +440,7 @@
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
                     </div>
-
+                </div>
                     <label class="form_label small_text">
                         Comment
                         <textarea placeholder="Text input" id="user-comment" ></textarea>
