--- a/index.html
+++ b/index.html
@@ -441,23 +441,32 @@
                         </svg>
                     </div>
                 </div>
-                    <label class="form_label small_text">
+                <div class="form_wrapper_container">
+                    <label class="form_label small_text" for="user-comment">
                         Comment
-                        <textarea placeholder="Text input" id="user-comment" ></textarea>
                     </label>
-
-                    <section class="policy_section">
-                        <input type="checkbox" name="checkbutton" value="true" id="user-privacy">
-                        <p class="small_text policy_acception_text">I accept the terms and conditions of the <a
-                                href="#">Privacy Policy</a></p>
-                    </section>
-
-                    <button type="button" class="form_button button">
-                        Send
-                    </button>
+                    <textarea placeholder="Text input" id="user-comment" name="user-comment"
+                        class="comment_textarea"></textarea>
                 </div>
-            </form>
+                <div class="form_wrapper_container">
+                    <section class="policy_section">
+                        <input type="checkbox" name="user-privacy" class="visually-hidden" value="true" id="user-privacy">
+                        <label class="small_text policy_acception_text" for="user-privacy" >I accept the terms and conditions of the
+                            <span class="policy_form_span">
+                                <svg class="svg_icon_container" width="10" height="8">
+                                    <use href="./images/icons.svg#"></use>
+                                </svg>
+                            </span>
+                            <a href="#" class="privacy_policy_text">Privacy Policy</a>
+                        </label>
+                    </section>
+                </div>
+                <button type="button" class="form_button button">
+                    Send
+                </button>
         </div>
+        </form>
+    </div>
     </div>
 </body>
 
