--- a/index.html
+++ b/index.html
@@ -448,8 +448,7 @@
                     <textarea placeholder="Text input" id="user-comment" name="user-comment"
                         class="comment_textarea"></textarea>
                 </div>
-                <div class="form_wrapper_container">
-                    <section class="policy_section">
+                <div class="form_wrapper_container policy_section">
                         <input type="checkbox" name="user-privacy" class="visually-hidden" value="true" id="user-privacy">
                         <label class="small_text policy_acception_text" for="user-privacy" >I accept the terms and conditions of the
                             <span class="policy_form_span">
@@ -459,7 +458,6 @@
                             </span>
                             <a href="#" class="privacy_policy_text">Privacy Policy</a>
                         </label>
-                    </section>
                 </div>
                 <button type="button" class="form_button button">
                     Send
