--- a/index.html
+++ b/index.html
@@ -393,12 +393,12 @@
                 </ul>
             </div>
             <div class="footer_wrapper_form">
-                <p class="body_medium footer_form_title">Subtitle</p>
+                <p class="body_medium footer_form_title">Subscribe</p>
                 <form class="footer_form">
                     <label class="form_label">
                         <input type="email" name="email" class="footer_form_input" placeholder="E-mail" type="text">
                     </label>
-                    <button type="button" class="footer_form_button button">
+                    <button type="submit" class="footer_form_button button">
                         Subscribe
                         <svg class="svg_icon_container" width="24" height="24">
                             <use href="./images/icons.svg#icon-send"></use>
@@ -410,7 +410,7 @@
     </footer>
 
     <!-- is_open -->
-    <div class="modal_overlay is_open ">
+    <div class="modal_overlay is_open">
         <div class="modal">
 
             <button type="button" class="svg_close_button">
@@ -439,7 +439,7 @@
                         Phone
                     </label>
                     <div class="label_wrapper_container">
-                        <input class="form_input" type="tel" name="number" placeholder="">
+                        <input class="form_input small_text" type="tel" name="number" placeholder="">
                         <svg class="svg_icon_container" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
@@ -450,13 +450,13 @@
                         Email
                     </label>
                     <div class="label_wrapper_container">
-                        <input class="form_input" type="email" name="email" placeholder="">
+                        <input class="form_input small_text" type="email" name="email" placeholder="">
                         <svg class="svg_icon_container" width="18" height="24">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
                     </div>
                 </div>
-                <div class="form_wrapper_container">
+                <div class="form_wrapper_container comment_form_wrapper_container">
                     <label class="form_label small_text" for="user-comment">
                         Comment
                     </label>
@@ -465,8 +465,7 @@
                 </div>
                 <div class="form_wrapper_container policy_section">
                     <input type="checkbox" name="user-privacy" class="visually-hidden" value="true" id="user-privacy">
-                    <label class="small_text policy_acception_text" for="user-privacy">I accept the terms and conditions
-                        of the
+                    <label class="small_text policy_acception_text" for="user-privacy">I accept the terms and conditions of the
                         <span class="policy_form_span">
                             <svg class="svg_icon_container" width="10" height="8">
                                 <use href="./images/icons.svg#icon-check"></use>
