--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                     <input type="checkbox" name="user-privacy" class="visually-hidden" value="true" id="user-privacy">
                     <label class="small_text policy_acception_text" for="user-privacy">I accept the terms and conditions of the
                         <span class="policy_form_span">
-                            <svg class="svg_icon_container" width="10" height="8">
+                            <svg class="policy_svg_icon_container" width="10" height="8">
                                 <use href="./images/icons.svg#icon-check"></use>
                             </svg>
                         </span>
