--- a/index.html
+++ b/index.html
@@ -435,22 +435,22 @@
                     </div>
                 </div>
                 <div class="form_wrapper_container">
-                    <label class="form_label small_text">
+                    <label class="form_label small_text" for="user-number">
                         Phone
                     </label>
                     <div class="label_wrapper_container">
-                        <input class="form_input small_text" type="tel" name="number" placeholder="">
+                        <input class="form_input small_text" type="tel" name="number" placeholder="" id="user-number">
                         <svg class="svg_icon_container" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="form_wrapper_container">
-                    <label class="form_label small_text">
+                    <label class="form_label small_text" for="user-email">
                         Email
                     </label>
                     <div class="label_wrapper_container">
-                        <input class="form_input small_text" type="email" name="email" placeholder="">
+                        <input class="form_input small_text" type="email" name="email" placeholder="" id="user-email">
                         <svg class="svg_icon_container" width="18" height="24">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
@@ -465,12 +465,13 @@
                 </div>
                 <div class="form_wrapper_container policy_section">
                     <input type="checkbox" name="user-privacy" class="visually-hidden" value="true" id="user-privacy">
-                    <label class="small_text policy_acception_text" for="user-privacy">I accept the terms and conditions of the
+                    <label class="small_text policy_acception_text" for="user-privacy">
                         <span class="policy_form_span">
                             <svg class="policy_svg_icon_container" width="10" height="8">
                                 <use href="./images/icons.svg#icon-check"></use>
                             </svg>
                         </span>
+                        I accept the terms and conditions of the
                         <a href="#" class="privacy_policy_text">Privacy Policy</a>
                     </label>
                 </div>
