--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                 <p class="body_medium footer_form_title">Subscribe</p>
                 <form class="footer_form">
                     <label class="form_label">
-                        <input type="email" name="email" class="footer_form_input" placeholder="E-mail" type="text">
+                        <input type="email" name="email" class="footer_form_input" placeholder="E-mail">
                     </label>
                     <button type="submit" class="footer_form_button button">
                         Subscribe
@@ -480,7 +480,6 @@
                 </button>
         </div>
         </form>
-    </div>
     </div>
 </body>
 
