--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 
             <p class="body_medium modal_title">Leave your contacts and we will call you back</p>
 
-            <form action="" class="form">
+            <form action="#" class="form">
                 <div class="form_wrapper_container">
                     <label class="form_label small_text" for="user-name">
                         Name
@@ -478,8 +478,9 @@
                 <button type="button" class="form_button button">
                     Send
                 </button>
+            </form>
         </div>
-        </form>
+
     </div>
 </body>
 
